# vastik-manager-telegram-bot

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: README.md
images/: heart.webm
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/kk/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
locales/tt/LC_MESSAGES/: messages.mo  messages.po
locales/uk/LC_MESSAGES/: messages.mo  messages.po
locales/uz/LC_MESSAGES/: messages.mo  messages.po
src/: config.py  init_bot.py  run.py
src/brokers/: __init__.py  notification_stream.py
src/callbacks/: common.py  lang.py
src/handlers/: __init__.py
src/handlers/commands/: admin.py  ent_personage.py  information.py  lang.py  links.py  references.py  schedule.py  start.py  tepropose_ideast.py
src/middlewares/: rate_limit.py
src/schemas/: __init__.py  roles.py  schedule.py  user.py
src/services/: messenger_service.py  redis_service.py  schedule_service.py  user_service.py
src/states/: tepropose_ideast.py
src/utils/keyboards/: inline.py
