[project]
name = "vastik-manager-telegram-bot"
version = "2.0.1"
description = "Add your description here"

authors = [{ name = "Ilnaz Mingaleev", email = "ilnazm1ngaleev@yandex.com" }]
readme = "README.md"

requires-python = "~=3.13.7"
dependencies = [
    "aiogram>=3.21.0",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.1",
    "redis>=6.4.0",
    "babel>=2.17.0",
    "faststream[rabbit]>=0.6.3",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[project.scripts]
start = "src.run:start"
migrate = "src.utils.migration_database:main"
babel = "src.utils.babel_locale:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
